--- a/package.json
+++ b/package.json
@@ -3,10 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.2",
+    "@material-ui/data-grid": "^4.0.0-alpha.13",
+    "axios": "^0.21.0",
     "create-react-app": "^4.0.1",
+    "material-ui": "^0.20.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-native": "^0.63.4",
     "react-scripts": "4.0.1",
+    "request": "^2.88.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
