--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^17.0.1",
     "react-native": "^0.63.4",
     "react-scripts": "4.0.1",
+    "react-spring": "^8.0.27",
     "request": "^2.88.2",
     "web-vitals": "^1.0.1"
   },
